--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     { "src": "api/*.js", "use": "@vercel/node" },
     { "src": "index.html", "use": "@vercel/static" },
-    { "src": "styles.css", "use": "@vercel/static" }  // Make sure styles.css is served as static
+    { "src": "styles.css", "use": "@vercel/static" } 
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
